# fpoop-dsl

./: README.md  default.nix  fpoop-dsl.cabal
app/: Main.hs
src/: FPOOP.hs
