name:                fpoop-dsl
version:             0.0.0
synopsis:            OOP concepts in Haskell
license:             GPL-3
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          grrwlf@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable fpoop
  main-is:             Main.hs
  build-depends        : base >=4.7 && <5
                       , containers
  hs-source-dirs:      src,app
  default-language:    Haskell2010
  GHC-options:         -Wall

